--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "eaf-rs"
-version = "0.4.0"
-authors = ["jens"]
-edition = "2018"
+version = "0.4.1"
+authors = ["Jens Larsson <jens.dev@fastmail.com>"]
+description = "Read/write ELAN files"
+repository = "https://github.com/jenslar/eaf-rs"
+keywords = ["elan", "eaf", "pfsx", "annotation", "xml"]
+edition = "2021"
 
 [dependencies]
-time = { version = "0.3.21", features = [ "formatting", "serde" ] }
-serde = { version = "1.0.163", features = [ "derive" ] }
-quick-xml = { version = "0.28.2", features = [ "serialize", "overlapped-lists" ] }
+time = { version = "0.3.23", features = [ "formatting", "serde" ] }
+serde = { version = "1.0.174", features = [ "derive" ] }
+quick-xml = { version = "0.29", features = [ "serialize", "overlapped-lists" ] }
 serde_json = "1.0.96"
-regex = "1.8.4"
+regex = "1.9.1"
 rayon = "1.7"
