--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
 name = "eaf-rs"
-version = "0.4.1"
+version = "0.5.0"
 authors = ["Jens Larsson <jens.dev@fastmail.com>"]
 description = "Read/write ELAN files"
 repository = "https://github.com/jenslar/eaf-rs"
 keywords = ["elan", "eaf", "pfsx", "annotation", "xml"]
 edition = "2021"
+license-file = "LICENSE.txt"
 
 [dependencies]
-time = { version = "0.3.23", features = [ "formatting", "serde" ] }
-serde = { version = "1.0.174", features = [ "derive" ] }
-quick-xml = { version = "0.29", features = [ "serialize", "overlapped-lists" ] }
-serde_json = "1.0.96"
-regex = "1.9.1"
-rayon = "1.7"
+time = { version = "0.3.29", features = [ "formatting", "serde" ] }
+serde = { version = "1.0.188", features = [ "derive" ] }
+quick-xml = { version = "0.30", features = [ "serialize", "overlapped-lists" ] }
+serde_json = "1.0.107"
+regex = "1.10.0"
+rayon = "1.8"
+csv = "1.3.0"
