--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eaf-rs"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Jens Larsson <jens.dev@fastmail.com>"]
 description = "Read/write ELAN files"
 repository = "https://github.com/jenslar/eaf-rs"
@@ -9,10 +9,16 @@ edition = "2021"
 license-file = "LICENSE.txt"
 
 [dependencies]
-time = { version = "0.3.29", features = [ "formatting", "serde" ] }
-serde = { version = "1.0.188", features = [ "derive" ] }
-quick-xml = { version = "0.30", features = [ "serialize", "overlapped-lists" ] }
-serde_json = "1.0.107"
-regex = "1.10.0"
-rayon = "1.8"
+time = { version = "0.3.36", features = [ "formatting", "serde" ] }
+serde = { version = "1.0.210", features = [ "derive" ] }
+serde_json = "1.0.128"
+quick-xml = { version = "0.36.2", features = [ "serialize", "overlapped-lists" ] }
+regex = "1.11.0"
+rayon = "1.10"
 csv = "1.3.0"
+unicode-segmentation = "1.12.0"
+termcolor = "1.4.1"
+blake3 = "1.5.4"
+uuid = { version = "1.11", features = ["v4"]}
+url = {version = "2.5.2", features = ["serde"]}
+mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
